--- a/.github/workflows/pkgmeta.yaml
+++ b/.github/workflows/pkgmeta.yaml
@@ -1,12 +1,17 @@
 package-as: FisherFriendToday
-#  on:
-#  push:
-#    tags:
- #     - '**'
-      ignore:
-  - Scripts            # ignore the scripts folder
-  - Modules/Debug.lua  # ignore a specific file
-  - "*.txt"              # ignore multiple files with a pattern
+# we need to let GitHub know _when_ we want to release.
+# this is typically only when we create a new tag.
+# make sure your tags are annotated!
+on:
+  workflow_dispatch:
+  push:
+    tags:
+      - '**'
+      
+    ignore:
+     - Scripts            # ignore the scripts folder
+     - Modules/Debug.lua  # ignore a specific file
+     - "*.txt"              # ignore multiple files with a pattern
 
 runs-on: ubuntu-latest
 enable-nolib-creation: no
@@ -30,17 +35,16 @@ externals:
   Libs/AceSerializer-3.0: https://repos.curseforge.com/wow/ace3/trunk/AceSerializer-3.0
   Libs/AceTimer-3.0: https://repos.curseforge.com/wow/ace3/trunk/AceTimer-3.0
 
-   env:
+  env:
       CF_API_KEY: ${{ secrets.CF_API_KEY }}
 #      WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
 #      WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
 
-    steps:
-
+  steps:
       # we first have to clone the AddOn project, this is a required step
       - name: Clone project
         uses: actions/checkout@v4
         with:
           fetch-depth: 0  # gets entire git history, needed for automatic changelogs
       - name: WoW Packager
-      uses: BigWigsMods/packager@v2.4.1
+  uses: BigWigsMods/packager@v2.4.1
