--- a/.github/workflows/pkgmeta.yaml
+++ b/.github/workflows/pkgmeta.yaml
@@ -7,13 +7,19 @@ on:
   push:
     tags:
       - '**'
-      
+  # a workflow is built up as jobs, and within these jobs are steps
+jobs:
+
+  # "release" is a job, you can name it anything you want
+  release:
+
+  runs-on: ubuntu-latest
     ignore:
      - Scripts            # ignore the scripts folder
      - Modules/Debug.lua  # ignore a specific file
      - "*.txt"              # ignore multiple files with a pattern
 
-runs-on: ubuntu-latest
+
 enable-nolib-creation: no
 externals:
   libs/Dashi: # required dependency
